@@ -20,7 +20,6 @@ commons-configuration.version=1.6
 commons-dbcp.version=1.4
 commons-httpclient.version=3.0.1
 commons-lang.version=2.4
-commons-logging.version=1.0.4
 commons-pool.version=1.5.4
 datanucleus-connectionpool.version=2.0.3
 datanucleus-core.version=2.0.3
