@@ -338,7 +338,6 @@ sub findHadoopJars()
       $coreJar = `ls $hadoopClassRoot/hadoop-core-*.jar`;
     }
 
-    my $loggingJar = `ls $hadoopClassRoot/lib/commons-logging-*.jar | grep -v api`;
     my $cfgJar = `ls $hadoopClassRoot/lib/commons-configuration-*.jar`;
     my $langJar = `ls $hadoopClassRoot/lib/commons-lang-*.jar`;
     my $cliJar = `ls $hadoopClassRoot/lib/commons-cli-*.jar`;
@@ -348,11 +347,10 @@ sub findHadoopJars()
     }
 
     chomp $coreJar;
-    chomp $loggingJar;
     chomp $cfgJar;
     chomp $langJar;
     chomp $cliJar;
-    return ($coreJar, $loggingJar, $cfgJar, $langJar, $cliJar);
+    return ($coreJar, $cfgJar, $langJar, $cliJar);
 }
 
 sub findHiveJars()
@@ -430,12 +428,12 @@ sub getJavaCmd()
             }
         } elsif ($format eq "rc") {
             print MYSQL &getBulkCopyCmd($tableName, "\t", "$tableName.plain");
-            my ($hadoopCoreJar, $commonsLoggingJar, $commonsConfigJar,
+            my ($hadoopCoreJar, $commonsConfigJar,
                 $commonsLangJar, $commonsCliJar) = findHadoopJars();
             my ($hiveExecJar, $hiveCliJar) = findHiveJars();
             my @cmd = (getJavaCmd(), '-cp',
                 "../tools/generate/java/hive-gen.jar:$hadoopCoreJar:" .
-                "$commonsLoggingJar:$commonsConfigJar:$commonsLangJar:" .
+                "$commonsConfigJar:$commonsLangJar:" .
                 "$hiveExecJar",
                 'org.apache.hadoop.hive.tools.generate.RCFileGenerator',
                 'student', $numRows, "$tableName", "$tableName.plain");
@@ -443,7 +441,7 @@ sub getJavaCmd()
                 . "]\n";
             #@cmd = ('java', '-cp',
             #    "$hiveCliJar:$hiveExecJar:$hadoopCoreJar:" .
-            #    "$commonsLoggingJar:$commonsCliJar:$commonsConfigJar",
+            #    "$commonsCliJar:$commonsConfigJar",
             #    "org.apache.hadoop.hive.cli.RCFileCat", "$tableName");
             #run(\@cmd, '>', $tableName) or
             #    die "Unable to run command [" . join(" ", @cmd) . "]\n";
