@@ -17,15 +17,14 @@
  */
 package org.apache.hcatalog.hbase.snapshot.lock;
 
-import org.apache.commons.logging.Log;
-import org.apache.commons.logging.LogFactory;
-import org.apache.hcatalog.hbase.snapshot.lock.ZooKeeperOperation;
 import org.apache.zookeeper.CreateMode;
 import org.apache.zookeeper.KeeperException;
 import org.apache.zookeeper.ZooDefs;
 import org.apache.zookeeper.ZooKeeper;
 import org.apache.zookeeper.data.ACL;
 import org.apache.zookeeper.data.Stat;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import java.util.List;
 import java.util.concurrent.atomic.AtomicBoolean;
@@ -39,7 +38,7 @@ import java.util.concurrent.atomic.AtomicBoolean;
  *  changes in the retry delay, retry count values and package name.
  */
 class ProtocolSupport {
-    private static final Log LOG = LogFactory.getLog(ProtocolSupport.class);
+    private static final Logger LOG = LoggerFactory.getLogger(ProtocolSupport.class);
 
     protected final ZooKeeper zookeeper;
     private AtomicBoolean closed = new AtomicBoolean(false);
