@@ -17,8 +17,6 @@
  */
 package org.apache.hcatalog.hbase.snapshot.lock;
 
-import org.apache.commons.logging.Log;
-import org.apache.commons.logging.LogFactory;
 import org.apache.zookeeper.KeeperException;
 import org.apache.zookeeper.WatchedEvent;
 import org.apache.zookeeper.Watcher;
@@ -26,6 +24,8 @@ import static org.apache.zookeeper.CreateMode.EPHEMERAL_SEQUENTIAL;
 import org.apache.zookeeper.ZooKeeper;
 import org.apache.zookeeper.data.ACL;
 import org.apache.zookeeper.data.Stat;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import java.util.List;
 import java.util.SortedSet;
@@ -42,7 +42,7 @@ import java.util.TreeSet;
  *  made is a TODO for sorting using suffixes and the package name.
  */
 public class WriteLock extends ProtocolSupport {
-    private static final Log LOG = LogFactory.getLog(WriteLock.class);
+    private static final Logger LOG = LoggerFactory.getLogger(WriteLock.class);
 
     private final String dir;
     private String id;
